--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
             <div class="flexbox-column column-half pad-30 jcc full-height" id="name-card">
                 <div class="flexbox-column aifs mb-50">
 
-                    <img src="./images/profile-photo-square.jpeg" alt="Placeholder photo" width="200" height="200" id="my-photo-mobile" class="center my-photo">
+                    <div class="my-photo-container">
+                        <img src="./images/profile-photo-square.jpeg" alt="Placeholder photo" width="205" height="200" id="my-photo-mobile" class="center">
+                    </div>
 
                     <h1 class="mt-30 nametag" style="margin-bottom: 0;">Hrushikesh</h1>
                     <h1 class="mb-30 nametag" style="margin-top: 0;">Vaidya</h1>
@@ -156,8 +158,10 @@
                     </div>
                 </div>
             </div>
-            <div class="flexbox-column column-half pad-30 jcc full-height">
-                <img src="./images/profile-photo-square.jpeg" alt="Placeholder Photo" id="my-photo-large-screen" height="300" width="300" class="mobile-hide my-photo">
+            <div class="flexbox-column column-half pad-30 jcc aifs full-height">
+                <div class="my-photo-container">
+                    <img src="./images/profile-photo-square.jpeg" alt="Placeholder Photo" id="my-photo-large-screen" height="300" width="310" class="mobile-hide">
+                </div>
             </div>
         </div>
 
@@ -192,11 +196,14 @@
                     by day, and a self-taught computer science student the rest of the time.
                 </span>
                 <span class="bio-text mbt-10 pad-20">
-                    I've been doing web development (using the Django-Postgres stack) since September 2020, and I finished and sold my first web app in June 2021.
+                    I wrote my first Python program in December of 2019, and since then I've been in love with learning more about <a href="https://hrus.in/ocw" class="a" target="_blank">computer science and programming</a> every day.
                 </span>
                 <span class="bio-text mbt-10 pad-20">
-                    Every day, I learn more about <a href="https://hrus.in/ocw" class="a" target="_blank">computer science and programming</a>
-                    and work on projects of my own.
+                    I've been doing web development (using the Django-Postgres stack) since September 2020. I finished and sold my first web app in June 2021.
+                </span>
+                <span class="bio-text mbt-10 pad-20">
+                    Now I work on <a class="a" href="https://github.com/hrushikeshrv">open source projects</a> of my own, and <a class="a"
+                        href="https://github.com/django/django/pulls?q=author%3Ahrushikeshrv+">contribute to Django</a> from time to time.
                 </span>
                 <span class="bio-text mbt-10 pad-20 message-warning-dark mobile-element">
                     This website has much more to offer you if you open it on a device with a big screen :)
