--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:wght@300;400;500;600;700&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
@@ -70,42 +70,10 @@
             </div>
         </div>
         <nav id="quick-nav" class="flexbox-row jcc aifs">
-            <a href="#bio" class="section-link flexbox-row aic" id="bio-tooltip">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-id space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <rect x="3" y="4" width="18" height="16" rx="3" />
-                  <circle cx="9" cy="10" r="2" />
-                  <line x1="15" y1="8" x2="17" y2="8" />
-                  <line x1="15" y1="12" x2="17" y2="12" />
-                  <line x1="7" y1="16" x2="17" y2="16" />
-                </svg>
-                <span>About</span>
-            </a>
-            <a href="#projects" class="section-link flexbox-row aic" id="projects-tooltip">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-                </svg>
-                <span>Projects</span>
-            </a>
-            <a href="#work" class="section-link flexbox-row aic" id="work-tooltip">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-device-laptop space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <line x1="3" y1="19" x2="21" y2="19" />
-                  <rect x="5" y="6" width="14" height="10" rx="1" />
-                </svg>
-                <span>Study</span>
-            </a>
-            <a href="https://resume.hrus.in" class="section-link flexbox-row ajc" id="resume-tooltip">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-code space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <path d="M14 3v4a1 1 0 0 0 1 1h4" />
-                  <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" />
-                  <path d="M10 13l-1 2l1 2" />
-                  <path d="M14 13l1 2l-1 2" />
-                </svg>
-                <span>Resume</span>
-            </a>
+            <a href="#bio" class="section-link flexbox-row aic" id="bio-tooltip"><span>About</span></a>
+            <a href="#projects" class="section-link flexbox-row aic" id="projects-tooltip"><span>Projects</span></a>
+            <a href="#work" class="section-link flexbox-row aic" id="work-tooltip"><span>Study</span></a>
+            <a href="https://resume.hrus.in" class="section-link flexbox-row ajc" id="resume-tooltip"><span>Resume</span></a>
         </nav>
         <div class="page flexbox-row" style="height: 90vh;">
             <div class="flexbox-column column-half pad-30 jcc full-height" id="name-card">
