Changed card story rendering

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="flexbox-column page pad-30 page-projects">
             <h1 class="mt-30 ml-30 big decorative-heading" id="projects">Projects</h1>
             <div>
-                <span class="mbt-10 pad-10 flexbox-row aic jcfs sticky-navbar" id="project-navbar">
+                <span class="mbt-10 pad-10 flexbox-row aic jcfs navbar" id="project-navbar">
 
                 </span>
                 <div class="flexbox-row pad-10 project-container" id="project-card-container">
@@ -281,7 +281,7 @@
 
             <h1 class="mt-30 ml-30 big decorative-heading" id="work">Work & Study</h1>
             <div>
-                <span class="mbt-10 pad-10 flexbox-row aic jcfs sticky-navbar" id="work-navbar">
+                <span class="mbt-10 pad-10 flexbox-row aic jcfs navbar" id="work-navbar">
 
                 </span>
                 <div class="flexbox-row pad-10 project-container" id="work-card-container">
