Changed story card rendering

--- a/index.html
+++ b/index.html
@@ -187,24 +187,21 @@
 <!--                <h1 class="big decorative-heading mb-50">Experience</h1>-->
 <!--                <div class="timeline-container flexbox-column column-twothird center pad-30 mt-30">-->
 <!--                    <div class="flexbox-column pad-30 timeline-item aifs first-timeline-item">-->
-<!--                        <h2 class="mono-font">Google Summer of Code</h2>-->
-<!--                        <span class="timeline-category">Django Software Foundation</span>-->
-<!--                        <span class="timeline-year">April 2022 - July 2022</span>-->
-<!--                        <span class="timeline-comment">-->
-<!--                            The COEP webteam is responsible for maintaining the college website and handling the servers-->
-<!--                            on-premises.-->
-<!--                        </span>-->
-<!--                    </div>-->
-
-<!--                    <div class="flexbox-column pad-30 timeline-item aifs last-timeline-item">-->
 <!--                        <h2 class="mono-font">COEP Webteam</h2>-->
-<!--                        <span class="timeline-year">December 2021 - Present</span>-->
+<!--                        <span class="timeline-year">December 2021 - July 2022</span>-->
 <!--                        <span class="timeline-comment">-->
-<!--                            The COEP webteam is responsible for maintaining the college website and handling the servers-->
+<!--                            The COEP webteam is responsible for maintaining the college website and maintaining the servers-->
 <!--                            on-premises.-->
 <!--                        </span>-->
 <!--                    </div>-->
-
+<!--                    <div class="flexbox-column pad-30 timeline-item aifs last-timeline-item">-->
+<!--                        <h2 class="mono-font">Anomaly Detection - Research Project</h2>-->
+<!--                        <span class="timeline-year">September 2022 - Present</span>-->
+<!--                        <span class="timeline-comment">-->
+<!--                            A research project with the Computer Engineering department at COEP in multi-modal anomaly detection-->
+<!--                            using audio and video feeds from a CCTV camera.-->
+<!--                        </span>-->
+<!--                    </div>-->
 <!--                </div>-->
 <!--            </div>-->
 <!--        </div>-->
