Working on new CardRenderer

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </p>
             <p class="bio-text">
                 I work on <a class="a" href="https://github.com/hrushikeshrv">open source projects</a> of my own,
-                and contribute to Django from time to time.
+                and contribute to <a href="https://github.com/django/django" class="a">Django</a> from time to time.
             </p>
         </div>
 
