--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 .then(json => {
                     const workCardRenderer = new CardRenderer(json, workContainer);
                     workCardRenderer.renderCard(json.mastercard);
-                    workCardRenderer.renderCard(json.coepweb);
+                    workCardRenderer.renderCard(json.coepidealabs);
                     workCardRenderer.renderCard(json.django);
                 });
 
