--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <h1 class="big">About</h1>
             <p class="bio-text">
                 I'm an electronics engineering student at the College of Engineering, Pune, by day, and
-                a self-taught computer science the rest of the time.
+                a self-taught computer science student the rest of the time.
             </p>
             <p class="bio-text">
                 I wrote my first Python program in December of 2019, and since then I've been in
@@ -145,8 +145,9 @@
                 programming every day.
             </p>
             <p class="bio-text">
-                I work on <a class="a" href="https://github.com/hrushikeshrv">open source projects</a> of my own,
-                and contribute to <a href="https://github.com/django/django" class="a">Django</a> from time to time.
+                Currently I'm working on a chess-playing robotic arm, a few other
+                <a class="a" href="https://github.com/hrushikeshrv">open source projects</a> of my own,
+                and contributing to <a href="https://github.com/django/django" class="a">Django</a> from time to time.
             </p>
         </div>
 
