--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="flexbox-column aifs mb-50">
 
                     <div class="my-photo-container">
-                        <img src="./images/profile-photo-square.jpeg" alt="Placeholder photo" width="200" height="200" id="my-photo-mobile" class="center">
+                        <img src="./images/profile-photo-square.jpg" alt="Placeholder photo" width="200" height="200" id="my-photo-mobile" class="center">
                     </div>
 
                     <h1 class="mt-30 nametag" style="margin-bottom: 0;">Hrushikesh</h1>
@@ -128,7 +128,7 @@
             </div>
             <div class="flexbox-column column-half pad-30 jcc aifs">
                 <div class="my-photo-container mobile-hide">
-                    <img src="./images/profile-photo-square.jpeg" alt="Profile Photo" id="my-photo-large-screen" height="300" width="300">
+                    <img src="./images/profile-photo-square.jpg" alt="Profile Photo" id="my-photo-large-screen" height="300" width="300">
                 </div>
             </div>
         </div>
