--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="#bio" class="section-link flexbox-row aic" id="bio-tooltip"><span>About</span></a>
             <a href="#work" class="section-link flexbox-row aic" id="work-tooltip"><span>Work</span></a>
             <a href="#projects" class="section-link flexbox-row aic" id="projects-tooltip"><span>Projects</span></a>
-            <a href="https://resume.hrus.in" class="section-link flexbox-row ajc" id="resume-tooltip"><span>Resume</span></a>
+            <a href="/data/resume-hrushikesh-vaidya.pdf" target="_blank" class="section-link flexbox-row ajc" id="resume-tooltip"><span>Resume</span></a>
         </nav>
         <div class="page flexbox-row" style="height: 90vh;">
             <div class="flexbox-column column-half pad-30 jcc" id="name-card">
