Added mastercard description, updated social media meta tags

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta name="author" content="Hrushikesh Vaidya | @hrushikeshrv on GitHub">
         <meta name="theme-color" content="rgb(243, 137, 4)">
+        <meta property="og:title" content="Hrushikesh Vaidya">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://hrus.in/images/profile-photo-square.jpg">
+        <meta property="og:url" content="https://hrus.in">
         <meta name="description" content="Hi, I'm Hrushikesh, a computer science student and web developer.">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Hrushikesh Vaidya</title>
