Added aria-label to theme change button

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href="#work" class="section-link flexbox-row aic" id="work-tooltip"><span>Work</span></a>
             <a href="#projects" class="section-link flexbox-row aic" id="projects-tooltip"><span>Projects</span></a>
             <a href="/data/resume-hrushikesh-vaidya.pdf" target="_blank" class="section-link flexbox-row ajc" id="resume-tooltip"><span>Resume</span></a>
-            <button id="change-theme-button" class="flexbox-row aic">
+            <button id="change-theme-button" class="flexbox-row aic" aria-label="Change Theme">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler dark-theme-button icon-tabler-moon" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" />
@@ -167,7 +167,7 @@
                 programming every day.
             </p>
             <p class="bio-text">
-                Currently I'm working on a chess-playing robotic arm, a few other
+                Currently I'm working on a <a href="https://github.com/hrushikeshrv/charm" class="a">chess-playing robotic arm</a>, a few other
                 <a class="a" href="https://github.com/hrushikeshrv">open source projects</a> of my own,
                 and contributing to <a href="https://github.com/django/django" class="a">Django</a> from time to time.
             </p>
