Added max width to section containers

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </svg>
             </button>
         </nav>
-        <div class="page flexbox-row" style="height: 90vh;">
+        <div class="page flexbox-row center" style="height: 90vh;">
             <div class="flexbox-column column-half pad-30 jcc" id="name-card">
                 <div class="flexbox-column aifs">
 
