--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                 .then(response => response.json())
                 .then(json => {
                     const workCardRenderer = new CardRenderer(json, workContainer);
+                    workCardRenderer.renderCard(json.widewings);
                     workCardRenderer.renderCard(json.mastercard);
-                    workCardRenderer.renderCard(json.coepidealabs);
                     workCardRenderer.renderCard(json.coepweb);
 
                     if (Object.keys(json).length > 3)
