--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 a self-taught computer science student the rest of the time.
             </p>
             <p class="bio-text">
-                I wrote my first Python program in December of 2019, and since then I've been in
+                I wrote my first Python program in December 2019, and since then I've been in
                 love with <a class="a" href="https://hrus.in/ocw">learning more</a> about computer science and
                 programming every day.
             </p>
@@ -278,20 +278,7 @@
         <script src="https://unpkg.com/@popperjs/core@2"></script>
         <script src="https://unpkg.com/tippy.js@6"></script>
         <script>
-            tippy('#classberg-static-tooltip', {
-                content: 'A static and optimized version of the same website hosted on classberg.com',
-                followCursor: true,
-                delay: 0,
-                duration: [300, 50],
-                theme: 'orange-gradient',
-            })
-            tippy('#docxlatex-documentation-inprogress', {
-                content: 'The documentation is still being written as docxlatex is still in beta',
-                followCursor: true,
-                delay: 0,
-                duration: [300, 50],
-                theme: 'orange-gradient',
-            })
+            tippy('[data-tippy-content]');
         </script>
     </body>
 </html>
